Sample color is not working in vertex paint. #60101

Closed
opened 2019-01-03 04:05:50 +01:00 by Enrique Barranco · 7 comments

System Information
Operating system: Linux
Graphics card: Nvidia GeForce GTX 1050 Ti

Blender Version
Broken:
2.80, 11f2c65128, blender2.8, January 03

Worked:
2.79

Short description of error

Sample color is not working in vertex paint

Exact steps for others to reproduce the error

  1. Open Blender
  2. Change to vertex paint.
  3. Paint some colors
  4. Use hotkey S to sample a color, nothing happens.
**System Information** Operating system: Linux Graphics card: Nvidia GeForce GTX 1050 Ti **Blender Version** Broken: 2.80, 11f2c65128dc, blender2.8, January 03 Worked: 2.79 **Short description of error** Sample color is not working in vertex paint **Exact steps for others to reproduce the error** 1. Open Blender 2. Change to vertex paint. 3. Paint some colors 4. Use hotkey S to sample a color, nothing happens.

Added subscriber: @ebarranco

Added subscriber: @ebarranco
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-01-03 11:23:49 +01:00
Member

Confirmed, checking...

Confirmed, checking...
Member

Caused by 70d352d994
Then cleaned up by ba6abd83b0

ref 2.79

static bool sample_color_poll(bContext *C)
{
	return (image_paint_poll(C) || vertex_paint_poll(C));
}
Caused by 70d352d994 Then cleaned up by ba6abd83b0 ref 2.79 ``` static bool sample_color_poll(bContext *C) { return (image_paint_poll(C) || vertex_paint_poll(C)); } ```

This issue was referenced by 5958dd4098

This issue was referenced by 5958dd4098e74d58665629bf341396ab82ca5b02

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thank you. :)

Thank you. :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60101
No description provided.