Fix T60101: vertex paint color sample